# Shoko

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: InputManager.h  TestShoko  main.cpp
Source/Shoko/: Border.h  BoxWidget.h  Button.h  Config.h  Demo.h  Experimental.h  Input.cpp  Input.h  Renderer.h  Shoko.h  Style.h  Styles.h  Types.h  Widget.h  WidgetContainer.h  WidgetWrapper.h  Widgets.h  Window.h
Source/Shoko/Core/: Aliases.h  InputManager.h  Macros.h  Math.h  Meta.h  New.h  Reflection.h
Source/Shoko/Platform/: PlatformInput.h  PlatformRenderer.h  PlatformWindow.h
Source/Shoko/Platform/Input/: InputDeclaration.h  None.h
Source/Shoko/Platform/Input/LCDShield/: LCDShieldPlatformInput.cpp  LCDShieldPlatformInput.h
Source/Shoko/Platform/Input/None/: None.h  NonePlatformInput.cpp  NonePlatformInput.h
Source/Shoko/Platform/Input/OpenGL/: OpenGLPlatformInput.cpp  OpenGLPlatformInput.h
Source/Shoko/Platform/Input/RayLib/: RayLibPlatformInput.cpp  RayLibPlatformInput.h
Source/Shoko/Platform/Input/SDL2/: SDL2PlatformInput.cpp  SDL2PlatformInput.h
Source/Shoko/Platform/Renderer/: RendererDeclaration.h
Source/Shoko/Platform/Renderer/HDMI/: HDMIPlatformRenderer.cpp  HDMIPlatformRenderer.h
Source/Shoko/Platform/Renderer/LCDShield/: LCDShieldPlatformRenderer.cpp  LCDShieldPlatformRenderer.h
Source/Shoko/Platform/Renderer/None/: None.h  NonePlatformRenderer.cpp  NonePlatformRenderer.h
Source/Shoko/Platform/Renderer/OpenGL/: OpenGLPlatformRenderer.cpp  OpenGLPlatformRenderer.h
Source/Shoko/Platform/Renderer/OpenGL/Shaders/: Default.frag  Default.vert  Rect.frag  Rect.vert
Source/Shoko/Platform/Renderer/OpenGL/Shaders/Arc/: Arc.frag
Source/Shoko/Platform/Renderer/OpenGL/Shaders/Circle/: Circle.frag
Source/Shoko/Platform/Renderer/OpenGL/Shaders/Rect/: Rect.frag
Source/Shoko/Platform/Renderer/RayLib/: RayLibPlatformRenderer.cpp  RayLibPlatformRenderer.h
Source/Shoko/Platform/Renderer/SDL2/: SDL2PlatformRenderer.cpp  SDL2PlatformRenderer.h
Source/Shoko/Platform/Window/: None.h  WindowDeclaration.h
Source/Shoko/Platform/Window/LCDShield/: LCDShieldPlatformWindow.cpp  LCDShieldPlatformWindow.h
Source/Shoko/Platform/Window/None/: None.h  NonePlatformWindow.cpp  NonePlatformWindow.h
Source/Shoko/Platform/Window/OpenGL/: OpenGLPlatformWindow.cpp  OpenGLPlatformWindow.h
Source/Shoko/Platform/Window/RayLib/: RayLibPlatformWindow.cpp  RayLibPlatformWindow.h
Source/Shoko/Platform/Window/SDL2/: SDL2PlatformWindow.cpp  SDL2PlatformWindow.h
Source/Shoko/Renderer/: Renderer.h
Source/Shoko/Renderer/Backends/OpenGL/: ShokoOpenGLRenderer.cpp  ShokoOpenGLRenderer.h
Source/Shoko/Renderer/Backends/SDL2/: ShokoSDL2Renderer.cpp  ShokoSDL2Renderer.h
Source/Shoko/Types/: Angle.h  Color.h  Geometry.h  InputEvent.h  Renderer.h  StaticArray.h  StringFixed.h  StringView.h  Tuple.h  Vector2D.h
Source/Shoko/Types/StaticPool/: StaticPool.h  StaticPoolBase.h
Source/Shoko/Types/StringBuffer/: StringBuffer.h  StringBufferBase.h
Source/Shoko/Widgets/: Border.h  BoxWidget.h  Button.h  CenterBox.h  CheckBox.h  HorizontalBox.h  OpenGLContext.h  PaddingBox.h  RootContainer.h  RoundBox.h  Slider.h  Text.h  TextInput.h  Toggle.h  VerticalBox.h  Widget.h  WidgetBase.h  WidgetContainer.h  WidgetPoolView.h  WidgetWrapper.h
Source/Shoko/Widgets/Base/: WidgetContainer.h  WidgetPoolView.h  WidgetWrapper.h
Source/Shoko/Widgets/Boxes/: CenterBox.h  HorizontalBox.h  HorizontalSplitterBox.h  PaddingBox.h  RootBox.h  VerticalBox.h  VerticalSplitterBox.h
Source/Shoko/Widgets/Primitives/: Rect.h  RoundRect.h
